# grounding-data

./: .gitignore  README.md  main.py  pyproject.toml
grounding/datasets/: data.py
grounding/format/: detect_multi_formatter.py  detect_multi_object_formatter.py  detect_single_format.py  detect_single_formater.py  detect_single_formatter.py  format.py  formater.py  formatter.py
grounding/models/: __init__.py  gpt_oss.py  model.py
grounding/pipeline/: convert.py  generate.py
grounding/utils/: bbox.py
visualizer/: data.ipynb
