[project]
name = "grounding-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "pydantic>=2.11.9",
    "vllm>=0.10.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]
